--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,12 @@
 			<artifactId>springfox-swagger2</artifactId>
 			<version>3.0.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -82,6 +87,8 @@
 								${project.basedir}/src/main/resources/oas/transferregistrationservice.yaml
 							</inputSpec>
 							<generatorName>spring</generatorName>
+							<apiPackage>au.gov.nsw.revenue.transferregistrationservice.openapi.api</apiPackage>
+							<modelPackage>au.gov.nsw.revenue.transferregistrationservice.openapi.model</modelPackage>
 							<configOptions>
 								<interfaceOnly>true</interfaceOnly>
 							</configOptions>
