resolved the dependencies issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.devtools.restart.enabled = true
+api.version=1.0
+api.name=Transfer Registration Service
+api.description=The API endpoints enables a client to link or unlink a Person to a Vehicle
